--- a/src/app/Components/ArticleCard/ArticleCard.module.css
+++ b/src/app/Components/ArticleCard/ArticleCard.module.css
@@ -1,14 +1,13 @@
 .ArticleCard {
     background-color: lightseagreen;
     border: 3px solid green;
-    border-radius: 5px;
+    border-radius: 10px;
     color: black;
     display:flex;
     gap:20px;
     font-family: Georgia, 'Times New Roman', Times, serif;
-    margin-bottom: 20px;
-    padding: 50x;
-
+    margin: 40px;
+    padding: 30px;
 }
 
 .ArticleCardCont{
